# components

src/material-experimental/mdc-snackbar/: BUILD.bazel  _mdc-snackbar.scss  index.ts  module.ts  public-api.js  snackbar.html  snackbar.scss  snackbar.ts  tsconfig-build.json
src/material/schematics/ng-generate/tree/files/__path__/__name@dasherize@if-flat__/: __name@dasherize__.component.ts.template
