package(default_visibility=["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_library", "sass_binary")
load("//tools:defaults.bzl", "ng_module")
load("//:packages.bzl", "CDK_TARGETS", "MATERIAL_TARGETS")

ng_module(
  name = "mdc-snackbar",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/material-experimental/mdc-snackbar",
  assets = [":snackbar_scss"] + glob(["**/*.html"]),
  deps = [
    "@npm//material-components-web",
  ] + CDK_TARGETS + MATERIAL_TARGETS,
)

sass_library(
  name = "snackbar_scss_lib",
  srcs = glob(["**/_*.scss"]),
  deps = [
    "//src/lib/core:core_scss_lib",
    "//src/material-experimental/mdc-helpers:mdc_helpers_scss_lib",
  ],
)

sass_binary(
  name = "snackbar_scss",
  src = "snackbar.scss",
)